调整部分格式

--- a/index.html
+++ b/index.html
@@ -4,23 +4,38 @@
   <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>The fourth Project</title>
-  <link rel="stylesheet" href="css/styles.css">
-   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<header class="header">
 		<div class="mid">
 			<img class="header-logo1" src="图片/漫威标志.jpg" alt="漫威标志">
+      <img class="header-logo2" src="图片/漫威标志字体.png" alt="漫威标志字体">
+      <p></p>
 			<h1 class="header-title">
-				漫威人物
+				漫威人物介绍
 			</h1>
-			<img class="header-logo2" src="图片/漫威标志字体.png" alt="漫威标志字体">
-			<hr>
+      <p></p>
 	</header>
+  <hr size="10" width="100%" color="black"> <!--一条横线的 宽度和颜色在html中表达-->
 	<nav class="nav">
 		<ul class=nav-list>
 			<li class="nav-item">
 				<a href="#钢铁侠Q版人物">钢铁侠</a>
+      <li class="nav-item">
+        <a href="#雷神Q版人物">雷神</a>
+      <li class="nav-item">
+        <a href="#黑豹Q版人物">黑豹</a>
+      <li class="nav-item">
+        <a href="#绿巨人Q版人物">绿巨人</a>
+      <li class="nav-item">
+        <a href="#美国队长Q版人物">美国队长</a>
+      <li class="nav-item">
+        <a href="#死侍Q版人物">死侍</a>
+      <li class="nav-item">
+        <a href="#蜘蛛侠Q版人物">蜘蛛侠</a>
+    </nav>
 	<main>
 		<section>
 			<article class=arti>
@@ -87,27 +102,34 @@
           </table>
          </section>
         <section class=picture>
-        	<div id="钢铁侠Q版人物">
+        	<span id="钢铁侠Q版人物">
         		<img class="piture-small" src="图片/钢铁侠.jpg" alt="钢铁侠Q版人物">
-        		<p>钢铁侠Q版人物</p>
-        	<div class="雷神">
-        		<img class="piture-small" src="图片/雷神.jpg" alt="雷神">
-        		<p>雷神Q版人物</p>
-        	<div class="黑豹">
-        		<img class="piture-small" src="图片/黑豹.jpg" alt="黑豹">
-        		<p>黑豹Q版人物</p>
-        	<div class="绿巨人">
-        		<img class="piture-small" src="图片/绿巨人.jpg" alt="绿巨人">
-        		<p>绿巨人Q版人物</p>
-        	<div class="美国队长">
-        		<img class="piture-small" src="图片/美国队长.jpg" alt="美国队长">
-        		<p>美国队长Q版人物</p>
-        	<div class="死侍">
-        		<img class="piture-small" src="图片/死侍.jpg" alt="死侍">
-        		<p>死侍Q版人物</p>
-        	<div class="蜘蛛侠">
-        		<img class="piture-small" src="图片/蜘蛛侠.jpg" alt="蜘蛛侠">
-        		<p>蜘蛛侠Q版人物</p>
+        		<span>钢铁侠Q版人物</span>
+          </span>
+        	<span id="雷神Q版人物">
+        		<img class="piture-small" src="图片/雷神.jpg" alt="雷神Q版人物">
+        		<span>雷神Q版人物</span>
+          </span>
+        	<span id="黑豹Q版人物">
+        		<img class="piture-small" src="图片/黑豹.jpg" alt="黑豹Q版人物">
+        		<span>黑豹Q版人物</span>
+          </span>
+        	<span id="绿巨人Q版人物">
+        		<img class="piture-small" src="图片/绿巨人.jpg" alt="绿巨人Q版人物">
+        		<span>绿巨人Q版人物</span>
+          </span>
+        	<span id="美国队长Q版人物">
+        		<img class="piture-small" src="图片/美国队长.jpg" alt="美国队长Q版人物">
+        		<span>美国队长Q版人物</span>
+          </span>
+        	<span id="死侍Q版人物"><!--d如果这里用div不用span，会马上换行-->
+        		<img class="piture-small" src="图片/死侍.jpg" alt="死侍Q版人物">
+        		<span>死侍Q版人物</span>
+          </span>
+        	<span id="蜘蛛侠Q版人物">
+        		<img class="piture-small" src="图片/蜘蛛侠.jpg" alt="蜘蛛侠Q版人物">
+        		<span>蜘蛛侠Q版人物</span>
+          </span>
         </section>       	
-
 </body>
+</html>
