把中文class修改为英文

--- a/index.html
+++ b/index.html
@@ -9,37 +9,39 @@
 </head>
 <body>
 	<header class="header">
-		<div class="mid">
-			<img class="header-logo1" src="图片/漫威标志.jpg" alt="漫威标志">
-      <img class="header-logo2" src="图片/漫威标志字体.png" alt="漫威标志字体">
-      <p></p>
-			<h1 class="header-title">
-				漫威人物介绍
-			</h1>
-      <p></p>
+			<img class="header-logo1" src="picture/manweibiaozhi.jpg" alt="漫威标志">
+      <img class="header-logo2" src="picture/manweibiaozhiziti.png" alt="漫威标志字体">
+    			<h1 class="header-title">
+             <ul class="top">
+				      <li>漫威</li>
+              <li>人物</li>
+              <li>介绍</li>
+            </ul>
+		    	</h1>
 	</header>
-  <hr size="10" width="100%" color="black"> <!--一条横线的 宽度和颜色在html中表达-->
+  <hr size="5" width="100%" color="red"> <!--一条横线的 宽度和颜色在html中表达-->
 	<nav class="nav">
 		<ul class=nav-list>
 			<li class="nav-item">
-				<a href="#钢铁侠Q版人物">钢铁侠</a>
+				<a href="#gtx">钢铁侠</a>
       <li class="nav-item">
-        <a href="#雷神Q版人物">雷神</a>
+        <a href="#ls">雷神</a><!--可以跳转到当前页面定义为ID雷神Q版人物的位置-->
       <li class="nav-item">
-        <a href="#黑豹Q版人物">黑豹</a>
+        <a href="#hb">黑豹</a>
       <li class="nav-item">
-        <a href="#绿巨人Q版人物">绿巨人</a>
+        <a href="#ljr">绿巨人</a>
       <li class="nav-item">
-        <a href="#美国队长Q版人物">美国队长</a>
+        <a href="#mgdz">美国队长</a>
       <li class="nav-item">
-        <a href="#死侍Q版人物">死侍</a>
+        <a href="#ss">死侍</a>
       <li class="nav-item">
-        <a href="#蜘蛛侠Q版人物">蜘蛛侠</a>
-    </nav>
-	<main>
-		<section>
+        <a href="#zzx">蜘蛛侠</a>
+    </ul>
+  </nav>
+	<main class="background">
+		<section class=section-header>
 			<article class=arti>
-				<h1>漫威简介<h1>
+				<p>漫威简介</p>
 					<p>美国漫威漫画公司（Marvel Comics）是与DC漫画公司（Detective Comics）齐名的漫画巨头，它创建于1939年，于1961年正式定名为Marvel，旧译为“惊奇漫画”，曾用名“时代漫画”（Timely Comics）、亚特拉斯漫画（Atlas Comics）。 [1] 1939年4月，公司在《电影连环画周刊》创刊号上创造出了世界上第一位变种人超级英雄——纳摩，这是MARVEL的第一位超级英雄，他比公司的成立还要早半年，同年10月，公司在《惊奇漫画》第1期上创造出世界上第一位生化人超级英雄——初代霹雳火，并将纳摩引入其中，这水与火的双重合作，打出了MARVEL史上的第一拳。2009年底，MARVEL被华特迪士尼公司以42.4亿美元收购，成为其子公司。2010年9月，MARVEL宣布其正式中文名称为“漫威”。旗下拥有蜘蛛侠、金刚狼、美国队长、钢铁侠、雷神托尔、绿巨人、惊奇队长、死侍、蚁人、黑豹、奇异博士、夜魔侠、惩罚者、杰茜卡·琼斯、卢克·凯奇、铁拳、恶灵骑士、刀锋战士、野蛮人柯南等超级英雄，和复仇者联盟、X战警、神奇四侠、银河护卫队、神盾局、捍卫者联盟、异人族、光照会等超级英雄团队。我挑选了几个我个人比较喜欢的英雄介绍给大家。
 					</p>
 			</article>
@@ -49,10 +51,10 @@
 			<caption>列表7个我个人比较喜欢的英雄</caption>
             <thead>
               <tr>
-                <th>姓名</th>
-                <th>主要能力</th>
-                <th>武器</th>
-                <th>简介</th>
+                <th class="th1">姓名</th>
+                <th class="th2">主要能力</th>
+                <th class="th3">武器</th>
+                <th class="th4">简介</th>
               </tr>
             </thead>
             <tbody>
@@ -100,36 +102,40 @@
               </tr>
             </tbody>
           </table>
-         </section>
-        <section class=picture>
-        	<span id="钢铁侠Q版人物">
-        		<img class="piture-small" src="图片/钢铁侠.jpg" alt="钢铁侠Q版人物">
+    </section>
+    <section class=picture>
+        	<span id="gtx">
+        		<img class="piture-small" src="picture/gtx.jpg" alt="钢铁侠Q版人物">
         		<span>钢铁侠Q版人物</span>
           </span>
-        	<span id="雷神Q版人物">
-        		<img class="piture-small" src="图片/雷神.jpg" alt="雷神Q版人物">
+        	<span id="ls">
+        		<img class="piture-small" src="picture/ls.jpg" alt="雷神Q版人物">
         		<span>雷神Q版人物</span>
           </span>
-        	<span id="黑豹Q版人物">
-        		<img class="piture-small" src="图片/黑豹.jpg" alt="黑豹Q版人物">
+        	<span id="hb">
+        		<img class="piture-small" src="picture/hb.jpg" alt="黑豹Q版人物">
         		<span>黑豹Q版人物</span>
           </span>
-        	<span id="绿巨人Q版人物">
-        		<img class="piture-small" src="图片/绿巨人.jpg" alt="绿巨人Q版人物">
+        	<span id="ljr">
+        		<img class="piture-small" src="picture/ljr.jpg" alt="绿巨人Q版人物">
         		<span>绿巨人Q版人物</span>
           </span>
-        	<span id="美国队长Q版人物">
-        		<img class="piture-small" src="图片/美国队长.jpg" alt="美国队长Q版人物">
+        	<span id="mgdz">
+        		<img class="piture-small" src="picture/mgdz.jpg" alt="美国队长Q版人物">
         		<span>美国队长Q版人物</span>
           </span>
-        	<span id="死侍Q版人物"><!--d如果这里用div不用span，会马上换行-->
-        		<img class="piture-small" src="图片/死侍.jpg" alt="死侍Q版人物">
+        	<span id="ss"><!--d如果这里用div不用span，会马上换行-->
+        		<img class="piture-small" src="picture/ss.jpg" alt="死侍Q版人物">
         		<span>死侍Q版人物</span>
           </span>
-        	<span id="蜘蛛侠Q版人物">
-        		<img class="piture-small" src="图片/蜘蛛侠.jpg" alt="蜘蛛侠Q版人物">
+        	<span id="zzx">
+        		<img class="piture-small" src="picture/zzx.jpg" alt="蜘蛛侠Q版人物">
         		<span>蜘蛛侠Q版人物</span>
           </span>
-        </section>       	
+    </section> 
+  </main> 
+  <footer>
+  版权申明
+  </footer>     	
 </body>
 </html>
